--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,19 @@
+@ARTICLE{2014MNRAS.441.3359D,
+   author = {{Dutton}, A.~A. and {Macci{\`o}}, A.~V.},
+    title = "{Cold dark matter haloes in the Planck era: evolution of structural parameters for Einasto and NFW profiles}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1402.7073},
+ keywords = {methods: numerical, galaxies: haloes, cosmology: theory, dark matter},
+     year = 2014,
+    month = jul,
+   volume = 441,
+    pages = {3359-3374},
+      doi = {10.1093/mnras/stu742},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.441.3359D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @PHDTHESIS{2001PhDT........21S,
    author = {{Stadel}, J.~G.},
     title = "{Cosmological N-body simulations and their analysis}",
