--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -96,7 +96,7 @@ This method reduces the bias to $2\%-3\%$ for halos sampled with
 $200$ particles.  
 To keep the biases of the velocity and density methods to the same
 low levels as in the new method, dark matter halos should be sampled
-with at least $\sim 2000$ particles. 
+with at least $\sim 4000$ particles. 
 We also show that the mass-concentration relationship could be
 shallower than expected from numerical experiments once the biases 
 of the different concentration measurements are taken into account.
@@ -564,7 +564,7 @@ modified version of the velocity algorithm that uses the data binning
 obtained for the density algorithm. 
 
 
-We then notice that the new method closely follows the results of
+The new method closely follows the results of
 the velocity method at higher masses, $M_h>10^{12}\hMsun$ or
 equivalently for $>5\times10^3$ particles.  
 For masses below that threshold the new method saturates at a
@@ -606,21 +606,21 @@ This method is based on the integrated mass profile.
 The results of the algorithm on the same data sample showed a bias  of
 $2\%-3\%$ for halos with $200$ particles and less than $1\%$ for halos
 with $500$ particles or more.  
+To keep the bias of the velocity and density methods below $2\%$ only halos
+with at least $\sim 4000$ particles should be taken into account.
 
-
-We also measured the mass concentration relationship. 
-The three methods are in broad agreement within the statistical
-uncertainties, although there are some noticeable differences.
-The first difference is that the density method produces
-systematically higher concentrations by a factor of $15\%$ compared to
-the velocity method.
+Measuring the mass concentration relationship the three methods are in
+broad agreement within the statistical  uncertainties, although there
+are some noticeable differences. 
+For instance, the density method produces systematically higher
+concentrations by a factor of $15\%$ compared to the velocity method.
 This systematic offset has been reported before with the same dataset 
 \citep{Prada2012} and with different simulations \citep{Klypin2016}
 without any conclusive explanation for its origin. 
-The second difference is that the velocity and integrated mass methods
+A second difference is that the velocity and integrated mass methods
 start to differ for masses below $10^{12}\hMsun$.  
 We found that correcting the mean concentration by the mean bias
-factor brings these two techniques into agreement
+factor brings these two techniques into agreement.
 
 These results show that using the integrated mass profile to find the
 Dark Matter halo concentration is a tool deserving deeper scrutiny.   
