mass-conc intro

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -308,7 +308,7 @@ corresponds to the definition in Eq. (\ref{eq:f_NFW}).
 \end{center}
 \vspace{-0.5cm}
 \caption{\emph{Left panel}. Average value of the fractional offset ($f_{\rm
-    off}$ in Eq. \ref{eq:f_off}) between the concentration in a halo at
+    off}$ in Eq. \ref{eq:f_off}) between the concentration in a halo at 
   high resolution versus its downsampled versions. 
   Thick lines
   correspond to massive halos in the Bolshoi simulation, thin lines to
@@ -572,8 +572,12 @@ concentration.
  
 \subsection{Impact on the Mass-Concentration Relationship}
 
-We now turn to the question of quantifying the concentration results
-of the new algorithm and possible applications of the biases found. 
+We now compare the esults for the mass-concentration
+relationship obtained with the three different algorithms.
+This helps to compare the concentration results
+of the new algorithm and, more importantly, showcase a probable
+consequence of the biases detected through bootstrapping. 
+
 
 Figure \ref{fig:concentration} shows the mass-concentration
 relationship for the density, velocity and integrated mass method.
