minor caption edit

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -200,9 +200,6 @@ concentration parameter.
 
 
 
-
-
-
 \section{Basic properties of the NFW density profile}
 \label{sec:basics}
 
@@ -308,11 +305,10 @@ corresponds to the definition in Eq. (\ref{eq:f_NFW}).
 \end{center}
 \vspace{-0.5cm}
 \caption{\emph{Left panel}. Average value of the fractional offset ($f_{\rm
-    off}$ in Eq. \ref{eq:f_off}) between the concentration in a halo at 
-  high resolution versus its downsampled versions. 
-  Thick lines
-  correspond to massive halos in the Bolshoi simulation, thin lines to
-  the Via Lactea simulation.
+    off}$ (Eq. \ref{eq:f_off}) between the concentration in a halo at 
+  high resolution and its bootstrapped versions. 
+  Thick (thin) lines correspond to massive halos in the Bolshoi (Via
+  Lactea) simulation.
   For each case close to $10000$ bootstrapping samples are used.
   The velocity method noticeably overestimates the concentration up to
   a factor of $0.20$, 
